# SocialNetwork

src/: .gitignore  docker-compose.yml  main.py  pyproject.toml
src/alembic/versions/: 2025_08_25_1408-d8f6795b1448_create_table_users.py  2025_09_10_1446-86ace5c2e205_add_custom_fields_for_users.py  2025_09_10_1506-4e5aae670b34_add_custom_fields_for_users.py  2025_09_10_1601-6569fa6f4a4c_create_table_access_tokens.py
src/api/: __init__.py
src/api/dependencies/: backend.py  strategy.py
src/api/dependencies/authentication/: __init__.py  access_tokens.py  fastapi_users_routers.py  user_manager.py  users.py
src/api/v1/: __init__.py  auth.py
src/core/: db_helper.py  lifespan.py  settings.py
src/core/authentication/: __init__.py  transport.py  user_manager.py
src/core/models/: access_token.py  base.py  user.py
src/core/schemas/: __init__.py  users.py
